grammar/.antlr/RobotLangParser.java
// Generated from /home/joao/Desktop/Compiladores/final/compiladores-1819-g15/grammar/RobotLang.g4 by ANTLR 4.7.1

        import java.util.Map;
        import java.util.HashMap;
        import java.util.LinkedHashMap;
        import java.util.Set;
        import java.util.HashSet;
        import java.util.ArrayList;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RobotLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, LINE_COMMENT=5, COMMENT=6, WHITESPACE=7, 
		TAB=8, NEWLINE=9, SKIPS=10, FUNC=11, WHILE=12, FOR=13, BREAK=14, ONE_OF=15, 
		ANY_OF=16, CASE=17, IF=18, ELSE=19, MOVE_WORD=20, STOP_WORD=21, PRINT_WORD=22, 
		OR=23, AND=24, EQUAL_OR_GREATER=25, EQUAL_OR_SMALLER=26, FUNC_TYPE_ASSIGN=27, 
		EQUALS_SYMBOL=28, GREATER_THAN=29, SMALLER_THAN=30, EQUALS=31, DIFF_FROM=32, 
		DIV=33, MULT=34, PLUS=35, MINUS=36, COMMA=37, COLON=38, END=39, END_FUNCTION=40, 
		END_FOR=41, END_WHILE=42, END_CHOOSE=43, END_IF=44, RETURN_WORD=45, IN=46, 
		INTWORD=47, STRINGWORD=48, REALWORD=49, IMPORT_WORD=50, TRUE=51, FALSE=52, 
		IDENTIFIER=53, STRING=54, REAL=55, INTEGER=56, ERROR=57;
	public static final int
		RULE_main = 0, RULE_chunk = 1, RULE_import_statement = 2, RULE_instruction = 3, 
		RULE_function_def = 4, RULE_function_header = 5, RULE_break_statement = 6, 
		RULE_while_loop = 7, RULE_for_loop = 8, RULE_choose = 9, RULE_if_statement = 10, 
		RULE_move = 11, RULE_print = 12, RULE_assignment = 13, RULE_assignable = 14, 
		RULE_expression = 15, RULE_boolean_expression = 16, RULE_declaration = 17, 
		RULE_function_call = 18, RULE_varvalue = 19, RULE_array = 20, RULE_array_init = 21, 
		RULE_value = 22, RULE_vartypes = 23, RULE_bool_comparator = 24, RULE_return_statement = 25, 
		RULE_var_identifier = 26, RULE_number = 27;
	public static final String[] ruleNames = {
		"main", "chunk", "import_statement", "instruction", "function_def", "function_header", 
		"break_statement", "while_loop", "for_loop", "choose", "if_statement", 
		"move", "print", "assignment", "assignable", "expression", "boolean_expression", 
		"declaration", "function_call", "varvalue", "array", "array_init", "value", 
		"vartypes", "bool_comparator", "return_statement", "var_identifier", "number"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "'['", "']'", null, null, null, null, "'\n'", null, 
		"'function'", "'while'", "'for'", "'break'", "'one of'", "'any of'", "'case'", 
		"'if'", "'else'", "'move'", "'stop'", "'print'", "'or'", "'and'", "'>='", 
		"'<='", "'->'", "'='", "'>'", "'<'", "'equals'", "'different from'", "'/'", 
		"'*'", "'+'", "'-'", "','", "':'", "'end'", "'endfunction'", "'endfor'", 
		"'endwhile'", "'endchoose'", "'endif'", "'return'", "'in'", "'integer'", 
		"'string'", "'real'", "'import'", "'true'", "'false'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, "LINE_COMMENT", "COMMENT", "WHITESPACE", 
		"TAB", "NEWLINE", "SKIPS", "FUNC", "WHILE", "FOR", "BREAK", "ONE_OF", 
		"ANY_OF", "CASE", "IF", "ELSE", "MOVE_WORD", "STOP_WORD", "PRINT_WORD", 
		"OR", "AND", "EQUAL_OR_GREATER", "EQUAL_OR_SMALLER", "FUNC_TYPE_ASSIGN", 
		"EQUALS_SYMBOL", "GREATER_THAN", "SMALLER_THAN", "EQUALS", "DIFF_FROM", 
		"DIV", "MULT", "PLUS", "MINUS", "COMMA", "COLON", "END", "END_FUNCTION", 
		"END_FOR", "END_WHILE", "END_CHOOSE", "END_IF", "RETURN_WORD", "IN", "INTWORD", 
		"STRINGWORD", "REALWORD", "IMPORT_WORD", "TRUE", "FALSE", "IDENTIFIER", 
		"STRING", "REAL", "INTEGER", "ERROR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RobotLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	        public static SymbolTable symbolTable = new SymbolTable();

	        public static Map<String,ArrayList<Type>> functionMap = new HashMap<>();

	        public static Map<String,Type> returnTypes = new LinkedHashMap<>();

	        public static int endfunctions;

	public RobotLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MainContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(RobotLangParser.EOF, 0); }
		public List<Import_statementContext> import_statement() {
			return getRuleContexts(Import_statementContext.class);
		}
		public Import_statementContext import_statement(int i) {
			return getRuleContext(Import_statementContext.class,i);
		}
		public List<ChunkContext> chunk() {
			return getRuleContexts(ChunkContext.class);
		}
		public ChunkContext chunk(int i) {
			return getRuleContext(ChunkContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT_WORD) {
				{
				{
				setState(56);
				import_statement();
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUNC) | (1L << WHILE) | (1L << FOR) | (1L << BREAK) | (1L << ONE_OF) | (1L << ANY_OF) | (1L << IF) | (1L << MOVE_WORD) | (1L << STOP_WORD) | (1L << PRINT_WORD) | (1L << RETURN_WORD) | (1L << INTWORD) | (1L << STRINGWORD) | (1L << REALWORD) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(62);
				chunk();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChunkContext extends ParserRuleContext {
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public ChunkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chunk; }
	}

	public final ChunkContext chunk() throws RecognitionException {
		ChunkContext _localctx = new ChunkContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_chunk);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(71); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(70);
					instruction();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(73); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_statementContext extends ParserRuleContext {
		public TerminalNode IMPORT_WORD() { return getToken(RobotLangParser.IMPORT_WORD, 0); }
		public TerminalNode IDENTIFIER() { return getToken(RobotLangParser.IDENTIFIER, 0); }
		public Import_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_statement; }
	}

	public final Import_statementContext import_statement() throws RecognitionException {
		Import_statementContext _localctx = new Import_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_import_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(IMPORT_WORD);
			setState(76);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public MoveContext move() {
			return getRuleContext(MoveContext.class,0);
		}
		public Function_defContext function_def() {
			return getRuleContext(Function_defContext.class,0);
		}
		public Function_headerContext function_header() {
			return getRuleContext(Function_headerContext.class,0);
		}
		public While_loopContext while_loop() {
			return getRuleContext(While_loopContext.class,0);
		}
		public For_loopContext for_loop() {
			return getRuleContext(For_loopContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public ChooseContext choose() {
			return getRuleContext(ChooseContext.class,0);
		}
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public Return_statementContext return_statement() {
			return getRuleContext(Return_statementContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public Break_statementContext break_statement() {
			return getRuleContext(Break_statementContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_instruction);
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				move();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				function_def();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				function_header();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(81);
				while_loop();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(82);
				for_loop();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(83);
				assignment();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(84);
				function_call();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(85);
				choose();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(86);
				if_statement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(87);
				print();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(88);
				return_statement();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(89);
				declaration();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(90);
				break_statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_defContext extends ParserRuleContext {
		public Function_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_def; }
	 
		public Function_defContext() { }
		public void copyFrom(Function_defContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CallImportFuncContext extends Function_defContext {
		public Token function_name;
		public VartypesContext return_value;
		public TerminalNode FUNC() { return getToken(RobotLangParser.FUNC, 0); }
		public TerminalNode IDENTIFIER() { return getToken(RobotLangParser.IDENTIFIER, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(RobotLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(RobotLangParser.COMMA, i);
		}
		public TerminalNode FUNC_TYPE_ASSIGN() { return getToken(RobotLangParser.FUNC_TYPE_ASSIGN, 0); }
		public VartypesContext vartypes() {
			return getRuleContext(VartypesContext.class,0);
		}
		public CallImportFuncContext(Function_defContext ctx) { copyFrom(ctx); }
	}
	public static class CallNormalFuncContext extends Function_defContext {
		public Token function_name;
		public TerminalNode FUNC() { return getToken(RobotLangParser.FUNC, 0); }
		public TerminalNode COLON() { return getToken(RobotLangParser.COLON, 0); }
		public ChunkContext chunk() {
			return getRuleContext(ChunkContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(RobotLangParser.IDENTIFIER, 0); }
		public TerminalNode END() { return getToken(RobotLangParser.END, 0); }
		public TerminalNode END_FUNCTION() { return getToken(RobotLangParser.END_FUNCTION, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(RobotLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(RobotLangParser.COMMA, i);
		}
		public CallNormalFuncContext(Function_defContext ctx) { copyFrom(ctx); }
	}

	public final Function_defContext function_def() throws RecognitionException {
		Function_defContext _localctx = new Function_defContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_function_def);
		int _la;
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				_localctx = new CallNormalFuncContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				match(FUNC);
				setState(94);
				((CallNormalFuncContext)_localctx).function_name = match(IDENTIFIER);
				setState(95);
				match(T__0);
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTWORD) | (1L << STRINGWORD) | (1L << REALWORD))) != 0)) {
					{
					setState(96);
					declaration();
					}
				}

				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(99);
					match(COMMA);
					setState(100);
					declaration();
					}
					}
					setState(105);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(106);
				match(T__1);
				setState(107);
				match(COLON);
				setState(108);
				chunk();
				setState(109);
				_la = _input.LA(1);
				if ( !(_la==END || _la==END_FUNCTION) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case 2:
				_localctx = new CallImportFuncContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				match(FUNC);
				setState(112);
				((CallImportFuncContext)_localctx).function_name = match(IDENTIFIER);
				setState(113);
				match(T__0);
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTWORD) | (1L << STRINGWORD) | (1L << REALWORD))) != 0)) {
					{
					setState(114);
					declaration();
					}
				}

				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(117);
					match(COMMA);
					setState(118);
					declaration();
					}
					}
					setState(123);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(124);
				match(T__1);
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==FUNC_TYPE_ASSIGN) {
					{
					setState(125);
					match(FUNC_TYPE_ASSIGN);
					setState(126);
					((CallImportFuncContext)_localctx).return_value = vartypes();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_headerContext extends ParserRuleContext {
		public Token function_name;
		public TerminalNode FUNC() { return getToken(RobotLangParser.FUNC, 0); }
		public TerminalNode IDENTIFIER() { return getToken(RobotLangParser.IDENTIFIER, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(RobotLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(RobotLangParser.COMMA, i);
		}
		public Function_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_header; }
	}

	public final Function_headerContext function_header() throws RecognitionException {
		Function_headerContext _localctx = new Function_headerContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_function_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(FUNC);
			setState(132);
			((Function_headerContext)_localctx).function_name = match(IDENTIFIER);
			setState(133);
			match(T__0);
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTWORD) | (1L << STRINGWORD) | (1L << REALWORD))) != 0)) {
				{
				setState(134);
				declaration();
				}
			}

			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(137);
				match(COMMA);
				setState(138);
				declaration();
				}
				}
				setState(143);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(144);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Break_statementContext extends ParserRuleContext {
		public TerminalNode BREAK() { return getToken(RobotLangParser.BREAK, 0); }
		public Break_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_break_statement; }
	}

	public final Break_statementContext break_statement() throws RecognitionException {
		Break_statementContext _localctx = new Break_statementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_break_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(BREAK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class While_loopContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(RobotLangParser.WHILE, 0); }
		public Boolean_expressionContext boolean_expression() {
			return getRuleContext(Boolean_expressionContext.class,0);
		}
		public TerminalNode COLON() { return getToken(RobotLangParser.COLON, 0); }
		public ChunkContext chunk() {
			return getRuleContext(ChunkContext.class,0);
		}
		public TerminalNode END() { return getToken(RobotLangParser.END, 0); }
		public TerminalNode END_WHILE() { return getToken(RobotLangParser.END_WHILE, 0); }
		public While_loopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while_loop; }
	}

	public final While_loopContext while_loop() throws RecognitionException {
		While_loopContext _localctx = new While_loopContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_while_loop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(WHILE);
			setState(149);
			match(T__0);
			setState(150);
			boolean_expression();
			setState(151);
			match(T__1);
			setState(152);
			match(COLON);
			setState(153);
			chunk();
			setState(154);
			_la = _input.LA(1);
			if ( !(_la==END || _la==END_WHILE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
